<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group_features"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_services"
            android:icon="@drawable/ic_av_timer_black_24dp"
            android:title="@string/services" />
        <item
            android:id="@+id/nav_change_vehicle"
            android:icon="@drawable/ic_car_24dp"
            android:title="@string/change_vehicle" />
        <item
            android:id="@+id/nav_purchase_credits"
            android:icon="@drawable/ic_account_balance_wallet_black_24dp"
            android:title="@string/purchase_credits" />

    </group>

    <group
        android:id="@+id/group_profile"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_remove_circle_outline_black_24dp"
            android:title="@string/logout" />

    </group>

</menu>
