<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="52dp"
    android:paddingRight="52dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="co.com.acktos.ubimoviltaxista.presentation.CarsActivity"
    android:background="@color/colorPrimary">

   <!-- <android.support.v7.widget.RecyclerView

        android:id="@+id/recycler_cars"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>-->


    <ImageView
        android:layout_width="231dp"
        android:layout_height="36dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="60dp"
        android:src="@drawable/logo_ubimovil_white"
        android:layout_above="@+id/textView2"
        android:layout_centerHorizontal="true" />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textColor="@color/colorPrimaryText"
            style="@style/TextAppearance.AppCompat.Small"
            android:textStyle="bold"
        android:layout_above="@+id/lbl_select_vehicle"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/textView2" />

    <TextView
        android:id="@+id/lbl_select_vehicle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_vehicle"
        android:textColor="@color/colorPrimaryText"
        style="@style/TextAppearance.AppCompat.Small"
        android:layout_centerInParent="true"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:weightSum="5"
        android:orientation="horizontal"
        android:layout_below="@+id/lbl_select_vehicle"
        android:layout_alignLeft="@+id/lbl_select_vehicle"
        android:layout_alignStart="@+id/lbl_select_vehicle"
        android:layout_marginTop="32dp">

        <ImageView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_car_24dp"
            android:tint="@color/white" />
        
        <Spinner
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:entries="@array/plates" />

        <Button
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:theme="@style/MainButton"
            android:text="@string/next"/>

    </LinearLayout>

</RelativeLayout>
