<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.com.acktos.ubimoviltaxista.presentation.BalanceActivity">


    <LinearLayout
        android:id="@+id/cont_active_card"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_ubimovil_yellow_200"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/active_card"
            android:paddingBottom="16dp"
            android:textColor="@color/color_ubimovil_grey_900"
            style="@style/Base.TextAppearance.AppCompat.Subhead" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="Valor de la recarga"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="end"
                style="@style/Base.TextAppearance.AppCompat.Subhead"
                android:text="$ 80.000"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="Valor de la recarga"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="end"
                style="@style/Base.TextAppearance.AppCompat.Subhead"
                android:text="$ 80.000"/>

        </LinearLayout>





    </LinearLayout>

    <FrameLayout
        android:layout_below="@+id/cont_active_card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="15/08/2015"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                style="@style/Base.TextAppearance.AppCompat.Large"/>

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_arrow_up_black_24dp"
                style="@style/Base.TextAppearance.AppCompat.Subhead"
                android:text="$ 80.000"/>

        </RelativeLayout>



    </FrameLayout>



    <LinearLayout
        android:id="@+id/cont_recharge_card"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@color/color_ubimovil_yellow">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Recarga Ahora"
            android:textColor="@color/color_ubimovil_grey_900"
            style="@style/Base.TextAppearance.AppCompat.Medium"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:weightSum="5"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <ImageView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_car_24dp"
                android:tint="@color/color_ubimovil_grey_50" />

            <EditText
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:entries="@array/plates"
                android:hint="@string/code"/>

            <Button
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:theme="@style/MainButton"
                android:text="@string/next"/>

        </LinearLayout>
    </LinearLayout>



</RelativeLayout>
